Fixing overflow
Fixed bug causing displaying [Copy] button over TOC of wiki page. Also changing padding for code box.

--- a/style.css
+++ b/style.css
@@ -10,3 +10,10 @@ pre.plain > code {
     line-height: 1;
     font-family: "Roboto Mono", Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 }
+div.page pre[class*="language-"] {
+    padding: .3em;
+}
+
+div.page div.code-toolbar {
+    overflow: auto;
+}
